# pinni

./: .editorconfig  .gitignore  CMakeLists.txt  LICENCE  conanfile.py  conanfile.txt  readme.md
cmake/: PinniConfig.cmake.in
include/: Application.h  Core.h  Engine.h  EntryPoint.h  Logger.h  Pinni.h  Window.h
sandbox/: App.cpp  CMakeLists.txt  conanfile.txt
src/: Application.cpp  Engine.cpp  Logger.cpp  Window.cpp
test/: 01_initialization_test.cpp  CMakeLists.txt
